# dhl-rerouter-poc

./: .env.example  .gitignore  .windsurfrules  CHANGELOG.md  README.md  config.yaml.example  pyproject.toml  tasks.md
dhl_rerouter_poc/: __init__.py  availability_checker.py  calendar_checker.py  config.py  email_client.py  email_client_imap.py  email_client_msgraph.py  logging_utils.py  main.py  parser.py  reroute_checker.py  reroute_executor.py  selectors_dhlde.py  utils.py  workflow_data_model.py
dhl_rerouter_poc/carriers/: __init__.py  base.py  dhl.py
dhl_rerouter_poc/carriers/dhl/: locators.py  pages.py
dhl_rerouter_poc/mail/: email_client_imap.py  email_client_msgraph.py  parser.py
docs/: README.md  project_report.md  workflow_data_model.md
selenium_utils/: base_page.py  webdriver_factory.py
tests/: conftest.py  reroute_scenarios.yaml  test_config_loader.py  test_main_workflow.py  test_scenarios_model.py  test_workflow_data_model.py  tracking_page_scenarios_dhl.yaml
tests/actions/: test_populate_shipment_tracking_info.py
tests/pages/: test_dhl_tracking_page.py
